--- a/unprefixed-style.css
+++ b/unprefixed-style.css
@@ -66,7 +66,7 @@ html, body {
   overflow-y: hidden;
   bottom: 0;
   text-align: center; }
-  .hand-area::scrollbar {
+  .hand-area::-webkit-scrollbar {
     display: none; }
   .hand-area > .card {
     vertical-align: top;
